# avyos

./: .gitignore  .gitlab-ci.yml  .golangci.yml  .woodpecker.yaml  .woodpecker.yml  CHANGELOG.md  Makefile  PKGBUILD  README.md  REQUIREMENTS  config.c  config.inc  cta.c  displayid2.c  edid.c  fcft.c  foot-features.c  go.mod  go.sum  input.c  log.c  main.c  meson.build  osc.c  render.c  render.h  shm.h  svg-backend-nanosvg.c
.builds/: freebsd-x64.yml
.github/workflows/: build-and-release.yml
.gitlab-ci/: ci.template
_external/autoconf/: INSTALL  aclocal.m4  configure
_external/automake/: ChangeLog  Makefile.in  aclocal.m4  configure
_external/libevdev/: configure.ac  meson.build  meson_options.txt
_external/libevdev/.gitlab-ci/: config.yml
_external/libevdev/libevdev/: libevdev.c
_external/libevdev/test/: test-libevdev-events.c
apps/: Makefile
cmd/: Makefile
config/: Makefile  init.lipi  locale.conf  passwd
data/: Makefile
device/: Makefile
di-edid-decode/: cta.c  main.c  meson.build
doc/: fcft_capabilities.3.scd  fcft_destroy.3.scd  fcft_font_options_create.3.scd  fcft_from_name.3.scd  fcft_from_name2.3.scd  fcft_init.3.scd  fcft_rasterize_grapheme_utf32.3.scd  fcft_set_scaling_filter.3.scd  fcft_text_run_destroy.3.scd  foot.ini.5.scd  meson.build
example/: main.c
files/: avyos.gpg
include/: displayid.h  edid.h  log.h
init/: Makefile
lib/: Makefile
libevdev/: libevdev-util.h  libevdev.h
nanosvg/: nanosvgrast.h
scripts/: fix-autogen.sh  genimage.sh  run-exec.sh
service/: Makefile
test/: test-event-names.c
(+363 files in other folders)
